Added css styles

--- a/index.html
+++ b/index.html
@@ -3,13 +3,44 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/kare-kare.html">Kare-Kare</a></li>
-            <li><a href="recipes/beef-mechado.html">Beef Mechado</a></li>
-            <li><a href="recipes/embutido.html">Embutido</a></li>
-        </ul>
+        <div class="border">
+            <h1>Odin Recipes</h1>
+
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <a href="recipes/kare-kare.html">
+                        <img class="card-icon" src="https://i.pinimg.com/564x/b2/17/17/b217179297cc91146ed7955c9ae2ae20.jpg" alt="Kare-Kare">
+                        <div class="container">
+                            <h3><b>Kare-Kare</b></h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <a href="recipes/beef-mechado.html">
+                        <img class="card-icon" src="https://i.pinimg.com/564x/12/de/21/12de218cf80c3217c42db3e71d3716dc.jpg" alt="Beef Mechado">
+                        <div class="container">
+                            <h3><b>Beef Mechado</b></h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <a href="recipes/embutido.html">
+                        <img class="card-icon" src="https://i.pinimg.com/564x/ab/1d/27/ab1d279529e57b372ee64c35a939da48.jpg" alt="Embutido">
+                        <div class="container">
+                            <h3><b>Embutido</b></h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        </div>
     </body>
 </html>
