--- a/recipes/embutido.html
+++ b/recipes/embutido.html
@@ -3,61 +3,75 @@
     <head>
         <meta charset="UTF-8">
         <title>Embutido Recipe</title>
-    </head>
+        <link rel="stylesheet" href="../css/recipes.css">
     <body>
-        <h1>Embutido Recipe</h1>
-        <img src="https://i.pinimg.com/564x/20/ab/3c/20ab3ce1e22f458928bcb8603fdcc09d.jpg" alt="Embutido">
-        <h2>Description</h2>
-        <p>Embutido is a Filipino meatloaf from ground pork. Usually steamed, covered in aluminum foil, can be frozen afterward to last for a month. Eaten cold or fried dipped in ketchup or sweet chili sauce.</p>
-        <h3>Ingredients</h3>
-        <h4>Meat</h4>
-        <ul>
-            <li>1 lb Ground pork</li>
-            <li>6 pieces Vienna sausage</li>
-        </ul>
+        <div class="border">
+            <h1>Embutido Recipe</h1>
+            <div class="row">
+                <div class="col-img">
+                    <img class="img-display" src="https://i.pinimg.com/564x/ab/1d/27/ab1d279529e57b372ee64c35a939da48.jpg" alt="Embutido">
+                </div>
+                <div class="col-desc">
+                    <div class="row contents">
+                        <div class="col-desc-header">
+                            <h2>Description</h2>
+                            <p>Embutido is a Filipino meatloaf from ground pork. Usually steamed, covered in aluminum foil, can be frozen afterward to last for a month. Eaten cold or fried dipped in ketchup or sweet chili sauce.</p>
+                        </div>
+                        <div class="col-desc-ingredients">
+                            <h3>Ingredients</h3>
+                            <h4>Meat</h4>
+                            <ul>
+                                <li>1 lb Ground pork</li>
+                                <li>6 pieces Vienna sausage</li>
+                            </ul>
 
-        <h4>Produce</h4>
-        <ul>
-            <li>1 Carrot, big</li>
-            <li>1 Green bell pepper, medium</li>
-            <li>1 Onion, big</li>
-            <li>2/3 cup Raisins</li>
-        </ul>
+                            <h4>Produce</h4>
+                            <ul>
+                                <li>1 Carrot, big</li>
+                                <li>1 Green bell pepper, medium</li>
+                                <li>1 Onion, big</li>
+                                <li>2/3 cup Raisins</li>
+                            </ul>
 
-        <h4>Refrigerated</h4>
-        <ul>
-            <li>2 pieces Egg, raw</li>
-            <li>2 Eggs (- each cut into 4), hard</li>
-        </ul>
+                            <h4>Refrigerated</h4>
+                            <ul>
+                                <li>2 pieces Egg, raw</li>
+                                <li>2 Eggs (- each cut into 4), hard</li>
+                            </ul>
 
-        <h4>Condiments</h4>
-        <ul>
-            <li>1/3 cup Sweet pickle relish</li>
-            <li>3 tbsp Tomato sauce</li>
-        </ul>
+                            <h4>Condiments</h4>
+                            <ul>
+                                <li>1/3 cup Sweet pickle relish</li>
+                                <li>3 tbsp Tomato sauce</li>
+                            </ul>
 
-        <h4>Baking & Spices</h4>
-        <ul>
-            <li>1/4 cup Flour</li>
-            <li>1/4 tsp Pepper</li>
-            <li>1 tsp Salt</li>
-        </ul>
+                            <h4>Baking & Spices</h4>
+                            <ul>
+                                <li>1/4 cup Flour</li>
+                                <li>1/4 tsp Pepper</li>
+                                <li>1 tsp Salt</li>
+                            </ul>
 
-        <h4>Bread & Baked Goods</h4>
-        <ul>
-            <li> 1 cup Breadcrumbs</li>
-        </ul>
-
-
-        <h2>Steps</h2>
-        <ol>
-            <li>Put all ingredients, except the last 2, in a large bowl.</li>
-            <li>Mix everything together using your hand to make sure that all is well incorporated. Set aside.</li>
-            <li>Cut 2 pieces of aluminum foil about 12 inches long each. Take half of the meat mixture and flatten it on of the foil, covering about a half. Don't forget to leave some space at the ends, about 2 inches each side.</li>
-            <li>Place the sausages and hard boiled eggs on the middle of the flattened meat.</li>
-            <li>Roll the foil so that the meat forms a cylinder or log, locking the sausage and egg in the center. Twist the ends of the foil to lock.</li>
-            <li>Steam for 50-60 minutes.</li>
-        </ol>
+                            <h4>Bread & Baked Goods</h4>
+                            <ul>
+                                <li> 1 cup Breadcrumbs</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-desc-instructions">
+                    <h2>Instructions</h2>
+                    <ol>
+                        <li>Put all ingredients, except the last 2, in a large bowl.</li>
+                        <li>Mix everything together using your hand to make sure that all is well incorporated. Set aside.</li>
+                        <li>Cut 2 pieces of aluminum foil about 12 inches long each. Take half of the meat mixture and flatten it on of the foil, covering about a half. Don't forget to leave some space at the ends, about 2 inches each side.</li>
+                        <li>Place the sausages and hard boiled eggs on the middle of the flattened meat.</li>
+                        <li>Roll the foil so that the meat forms a cylinder or log, locking the sausage and egg in the center. Twist the ends of the foil to lock.</li>
+                        <li>Steam for 50-60 minutes.</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
 
     </body>
 
