--- a/recipes/kare-kare.html
+++ b/recipes/kare-kare.html
@@ -3,71 +3,87 @@
     <head>
         <meta charset="UTF-8">
         <title>Kare-Kare Recipe</title>
+        <link rel="stylesheet" href="../css/recipes.css">
     </head>
     <body>
-        <h1>Kare-Kare Recipe</h1>
-        <img src="https://i.pinimg.com/564x/b2/17/17/b217179297cc91146ed7955c9ae2ae20.jpg" alt="Kare-Kare">
-        <h2>Description</h2>
-        <p>This is a recipe for Kare-kare or ox tripe stew</p>
-        <h3>Ingredients</h3>
+        <div class="border">
+            <h1>Kare-Kare Recipe</h1>
+            <div class="row">
+                <div class="col-img">
+                    <img class="img-display" src="https://i.pinimg.com/564x/b2/17/17/b217179297cc91146ed7955c9ae2ae20.jpg" alt="Kare-Kare">
+                </div>
+                <div class="col-desc">
+                    <div class="row contents">
+                        <div class="col-desc-header">
+                            <h2>Description</h2>
+                            <p>This is a recipe for Kare-kare or ox tripe stew</p>
+                        </div>
+                        <div class="col-desc-ingredients">
+                            <h3>Ingredients</h3>
 
-        <h4>Meat</h4>
-        <ul>
-            <li>3 lbs Oxtail</li>
-        </ul>
+                            <h4>Meat</h4>
+                            <ul>
+                                <li>3 lbs Oxtail</li>
+                            </ul>
 
-        <h4>Seafood</h4>
-        <ul>
-            <li>1/2 cup Shrimp paste</li>
-        </ul>
+                            <h4>Seafood</h4>
+                            <ul>
+                                <li>1/2 cup Shrimp paste</li>
+                            </ul>
 
-        <h4>Produce</h4>
-        <ul>
-            <li>1 piece Banana flower bud, small</li>
-            <li>4 pieces Eggplants</li>
-            <li>1 tbsp Garlic</li>
-            <li>1 piece Onion</li>
-            <li>1 cup Peanuts, ground</li>
-            <li>1 bundle Pechay or bok choy</li>
-            <li>1 bundle String beans</li>
-        </ul>
+                            <h4>Produce</h4>
+                            <ul>
+                                <li>1 piece Banana flower bud, small</li>
+                                <li>4 pieces Eggplants</li>
+                                <li>1 tbsp Garlic</li>
+                                <li>1 piece Onion</li>
+                                <li>1 cup Peanuts, ground</li>
+                                <li>1 bundle Pechay or bok choy</li>
+                                <li>1 bundle String beans</li>
+                            </ul>
 
-        <h4>Condiments</h4>
-        <ul>
-            <li>1/2 cup Peanut butter</li>
-        </ul>
+                            <h4>Condiments</h4>
+                            <ul>
+                                <li>1/2 cup Peanut butter</li>
+                            </ul>
 
-        <h4>Pasta & Grains</h4>
-        <ul>
-            <li>1/2 cup Rice, toasted ground</li>
-        </ul>
+                            <h4>Pasta & Grains</h4>
+                            <ul>
+                                <li>1/2 cup Rice, toasted ground</li>
+                            </ul>
 
-        <h4>Baking & Spices</h4>
-        <ul>
-            <li>1 Salt and pepper</li>
-        </ul>
+                            <h4>Baking & Spices</h4>
+                            <ul>
+                                <li>1 Salt and pepper</li>
+                            </ul>
 
-        <h4>Liquids</h4>
-        <ul>
-            <li>34 oz Water</li>
-        </ul>
+                            <h4>Liquids</h4>
+                            <ul>
+                                <li>34 oz Water</li>
+                            </ul>
 
-        <h4>Other</h4>
-        <ul>
-            <li>1/2 cup Annatto seeds (soaked in a cup of water)</li>
-        </ul>
-
-        <h2>Steps</h2>
-        <ol>
-            <li>In a large pot, bring the water to a boil</li>
-            <li>Put in the oxtail followed by the onions and simmer for 2.5 to 3 hrs or until tender (35 minutes if using a pressure cooker)</li>
-            <li>Once the meat is tender, add the ground peanuts, peanut butter, and coloring (water from the annatto seed mixture) and simmer for 5 to 7 minutes</li>
-            <li>Add the toasted ground rice and simmer for 5 minutes</li>
-            <li>On a separate pan, saute the garlic then add the banana flower, eggplant, and string beans and cook for 5 minutes</li>
-            <li>Transfer the cooked vegetables to the large pot (where the rest of the ingredients are)</li>
-            <li>Add salt and pepper to taste</li>
-            <li>Serve hot with shrimp paste. Enjoy!</li>
-        </ol>
+                            <h4>Other</h4>
+                            <ul>
+                                <li>1/2 cup Annatto seeds (soaked in a cup of water)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-desc-instructions">
+                    <h2>Instructions</h2>
+                    <ol>
+                        <li>In a large pot, bring the water to a boil</li>
+                        <li>Put in the oxtail followed by the onions and simmer for 2.5 to 3 hrs or until tender (35 minutes if using a pressure cooker)</li>
+                        <li>Once the meat is tender, add the ground peanuts, peanut butter, and coloring (water from the annatto seed mixture) and simmer for 5 to 7 minutes</li>
+                        <li>Add the toasted ground rice and simmer for 5 minutes</li>
+                        <li>On a separate pan, saute the garlic then add the banana flower, eggplant, and string beans and cook for 5 minutes</li>
+                        <li>Transfer the cooked vegetables to the large pot (where the rest of the ingredients are)</li>
+                        <li>Add salt and pepper to taste</li>
+                        <li>Serve hot with shrimp paste. Enjoy!</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
 
     </body>
 
