--- a/recipes/kare-kare.html
+++ b/recipes/kare-kare.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="../css/recipes.css">
     </head>
     <body>
+        <div class="topnav">
+            <a href="../index.html">Home</a>
+            <a href="beef-mechado.html">Beef Mechado</a>
+            <a href="embutido.html">Embutido</a>
+            <a href="">About</a>
+        </div>
+
         <div class="border">
             <h1>Kare-Kare Recipe</h1>
             <div class="row">
