--- a/recipes/beef-mechado.html
+++ b/recipes/beef-mechado.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="../css/recipes.css">
     </head>
     <body>
+        <div class="topnav">
+            <a href="../index.html">Home</a>
+            <a href="kare-kare.html">Kare-Kare</a>
+            <a href="embutido.html">Embutido</a>
+            <a href="">About</a>
+        </div>
+
         <div class="border">
             <h1>Beef Mechado</h1>
             <div class="row">
